@@ -333,6 +333,7 @@ const (
 	SessionTTLMaxDelay          = "SessionTTLMaxDelay"
 	SessionTTLLastUsed          = "SessionTTLLastUsed"
 	SessionTTLUsage             = "SessionTTLUsage"
+	SessionTTLLastUsage         = "SessionTTLLastUsage"
 	HandlerSubstractUsage       = "*substract_usage"
 	XML                         = "xml"
 	MetaGOB                     = "*gob"
@@ -1705,6 +1706,7 @@ const (
 	SessionTTLMaxDelayCfg  = "session_ttl_max_delay"
 	SessionTTLLastUsedCfg  = "session_ttl_last_used"
 	SessionTTLUsageCfg     = "session_ttl_usage"
+	SessionTTLLastUsageCfg = "session_ttl_last_usage"
 	SessionIndexesCfg      = "session_indexes"
 	ClientProtocolCfg      = "client_protocol"
 	ChannelSyncIntervalCfg = "channel_sync_interval"
